Build native image using GraalVM